--- a/css/default.css
+++ b/css/default.css
@@ -1,2 +1,44 @@
 @import "../vendor/twitter/bootstrap/dist/css/bootstrap.min.css";
 @import "../vendor/twitter/bootstrap/dist/css/bootstrap-theme.css";
+
+
+body {
+    font-family: 'Oswald', serif;
+    font-weight: 300;
+}
+
+nav, h3 {
+    text-transform: uppercase;
+}
+
+h3{
+    color:#3C3C3B;
+}
+
+nav li.active a{
+    color: #d86440 !important;
+}
+
+.nav li ::after{
+    content: " / ";
+    padding: 0 0px 0 10px;
+}
+
+
+.navbar-default .navbar-nav > li > a{
+    color: #929292;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus{
+    background-image: none;
+    filter: none;
+    background-repeat: no-repeat;
+    border-radius: 0px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: #FFFFFF;
+    border-color: #e7e7e7;
+}
