re changing the footer

--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,9 @@ body {
     font-family: 'Oswald', serif;
     font-weight: 300;
 }
-
+/**
+*   NAVIGATION STUFF
+**/
 nav, h3 {
     text-transform: uppercase;
 }
@@ -41,4 +43,26 @@ nav li.active a{
     box-shadow: none;
     background-color: #FFFFFF;
     border-color: #e7e7e7;
+}
+
+/**
+*   FOOTER STUFF
+**/
+
+footer .hr{
+    height: 1px;
+    background-color: #6D6D6C;
+    text-align: right
+}
+
+footer .hr-span{
+    background-color: white;
+    position: relative;
+    top: -0.5em;
+    padding-left: 14px;
+}
+
+footer .container{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
