--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,21 @@ nav li.active a{
     background-color: #FFFFFF;
     border-color: #e7e7e7;
 }
+/**
+*   CONTENT STUFF
+**/
+
+#section p{
+    color: #A2A2A2;
+}
+
+#section .section-header{
+    margin-bottom: 35px;
+}
+
+#home .img-responsive, #section .img-responsive, #project .img-responsive{
+    margin-top: 35px;
+}
 
 /**
 *   FOOTER STUFF
